formatação de numeros.txt
Type ".help" for more information.
> var n1 = 1545.5
undefined
> n1
1545.5
> n1.toFixed(2)
'1545.50'
> n1.toFixed(2).replace('.',',')
'1545,50'
> n1.tolocaleString('pt-BR', {'currency', currency: 'BRL'})
n1.tolocaleString('pt-BR', {'currency', currency: 'BRL'})
                                      ^

Uncaught SyntaxError: Unexpected token ','
> n1.toLlocaleString('pt-BR', {styly: 'currency', currency: 'BRL'})
Uncaught TypeError: n1.toLlocaleString is not a function
> n1.toLocaleString('pt-BR', {style: 'currency', currency: 'BRL'})
'R$ 1.545,50'
> n1.toLocaleString('pt-BR', {style: 'currency', currency: 'USD'})
'US$ 1.545,50'
> n1.toLocaleString('pt-BR', {style: 'currency', currency: 'EUR'})
'€ 1.545,50'
>
